// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ForgotPassword - UI > should match snapshot in initial state 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-cuefkz-MuiContainer-root"
  >
    <div
      animate="[object Object]"
      class="MuiBox-root css-z727b5"
      initial="[object Object]"
      transition="[object Object]"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-bt8yft-MuiPaper-root"
      >
        <div
          class="MuiBox-root css-3b2wtl"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1np0xvr-MuiTypography-root"
          >
            Forgot Password?
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
          >
            Enter your registered email below to receive a password reset link
          </p>
        </div>
        <form>
          <div
            class="MuiBox-root css-1i43dhb"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for="email"
                id="email-label"
              >
                Email Address
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-md26zr-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id="email"
                  name="email"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-r01yff-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-njhac4-MuiNotchedOutlined-root"
                  >
                    <span>
                      Email Address
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth css-fxjdij-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="submit"
            >
              Send Reset Link
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <div
          class="MuiBox-root css-mg4yo"
        >
          <a
            class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover css-1e34cm-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            Back to Sign In
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ForgotPassword - UI > should match snapshot when successMessage and demoResetLink are set 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-cuefkz-MuiContainer-root"
  >
    <div
      animate="[object Object]"
      class="MuiBox-root css-z727b5"
      initial="[object Object]"
      transition="[object Object]"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-bt8yft-MuiPaper-root"
      >
        <div
          class="MuiBox-root css-3b2wtl"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1np0xvr-MuiTypography-root"
          >
            Forgot Password?
          </h1>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
          >
            Enter your registered email below to receive a password reset link
          </p>
        </div>
        <div
          animate="[object Object]"
          class="MuiBox-root css-1adrt5o"
          initial="[object Object]"
          transition="[object Object]"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-1locc4t-MuiTypography-root"
          >
            [Demo Mode] Reset link generated successfully:
          </p>
          <a
            href="/reset-password?token=xyz"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedWarning MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorWarning MuiButton-root MuiButton-contained MuiButton-containedWarning MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorWarning css-u6c9ui-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Go to Reset Password
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
        <form>
          <div
            class="MuiBox-root css-1i43dhb"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="false"
                for="email"
                id="email-label"
              >
                Email Address
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-md26zr-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input"
                  id="email"
                  name="email"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-r01yff-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-njhac4-MuiNotchedOutlined-root"
                  >
                    <span>
                      Email Address
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth css-fxjdij-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="submit"
            >
              Send Reset Link
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </form>
        <div
          class="MuiBox-root css-mg4yo"
        >
          <a
            class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover css-1e34cm-MuiTypography-root-MuiLink-root"
            href="/login"
          >
            Back to Sign In
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
